atualiza pagina pedidos

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <nav class="templatemo-left-nav">          
           <ul>
             <li><a href="#" class="active"><i class="fa fa-home fa-fw"></i>Dashboard</a></li>
-            <li><a href="manage-users.html"><i class="fa fa-users fa-fw"></i>Manage Users</a></li>
+            <li><a href="pedidos.html"><i class="fa fa-users fa-fw"></i>Pedidos</a></li>
             <li><a href="preferences.html"><i class="fa fa-sliders fa-fw"></i>Preferences</a></li>
           </ul>
         </nav>
