--- a/pedidos.html
+++ b/pedidos.html
@@ -26,9 +26,9 @@
       <div class="mobile-menu-icon"><i class="fa fa-bars"></i></div>
       <nav class="templatemo-left-nav">
         <ul>
-          <li><a href="index.html"><i class="fa fa-home fa-fw"></i>Dashboard</a></li>
+          <!--<li><a href="index.html"><i class="fa fa-home fa-fw"></i>Dashboard</a></li>-->
           <li><a href="#" class="active"><i class="fa fa-users fa-fw"></i>Pedidos</a></li>
-          <li><a href="preferences.html"><i class="fa fa-sliders fa-fw"></i>Preferences</a></li>
+          <!--<li><a href="preferences.html"><i class="fa fa-sliders fa-fw"></i>Preferences</a></li>-->
         </ul>
       </nav>
     </div>
@@ -56,6 +56,7 @@
                   <td>Data</td>
                   <td>Forma de pagamento</td>
                   <td>Valor pagp</td>
+                  <td>Ações</td>
                 </tr>
               </thead>
               <tbody id="tabelaPedidos">
