--- a/pedidos.html
+++ b/pedidos.html
@@ -4,16 +4,20 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Visual Admin Dashboard - Manage Users</title>
+  <title>Vendas</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,700" rel="stylesheet">
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/templatemo-style.css" rel="stylesheet">
-  <link href="style.css" rel="stylesheet"> <!-- CSS customizado -->
+  <link href="style.css" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
+
 
   <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+
   <![endif]-->
 </head>
 <body>
@@ -64,7 +68,32 @@
               </tbody>
             </table>
           </div>
+          <div style="margin-bottom: 20px;">
+            <label for="mes">Mês:</label>
+            <select id="mes">
+              <option value="">Todos</option>
+              <option value="0">Janeiro</option>
+              <option value="1">Fevereiro</option>
+              <option value="2">Março</option>
+              <option value="3">Abril</option>
+              <option value="4">Maio</option>
+              <option value="5">Junho</option>
+              <option value="6">Julho</option>
+              <option value="7">Agosto</option>
+              <option value="8">Setembro</option>
+              <option value="9">Outubro</option>
+              <option value="10">Novembro</option>
+              <option value="11">Dezembro</option>
+            </select>
+
+            <label for="ano">Ano:</label>
+            <input type="number" id="ano" placeholder="ex: 2025" min="2000" max="2099">
+
+            <button onclick="baixarRelatorioFiltrado()" class="btn btn-primary">Baixar Relatório Filtrado (PDF)</button>
         </div>
+        </div>
+
+
 
         <!-- Formulário de pedido -->
         <div class="templatemo-flex-row flex-content-row">
@@ -121,7 +150,7 @@
                     <div class="select-wrapper">
                       <select id="pagamento" class="form-control" required>
                         <option value="" disabled selected>Como deseja pagar?</option>
-                        <option value="pix">Pix (5% de desconto)</option>
+                        <option value="pix">Pix</option>
                         <option value="dinheiro">Dinheiro</option>
                         <option value="cartao">Cartão de crédito/débito</option>
                       </select>
