atualiza página início e pedidos

--- a/pedidos.html
+++ b/pedidos.html
@@ -30,7 +30,7 @@
       <div class="mobile-menu-icon"><i class="fa fa-bars"></i></div>
       <nav class="templatemo-left-nav">
         <ul>
-          <!--<li><a href="index.html"><i class="fa fa-home fa-fw"></i>Dashboard</a></li>-->
+          <li><a href="index.html"><i class="fa fa-home fa-fw"></i>Início</a></li>
           <li><a href="#" class="active"><i class="fa fa-users fa-fw"></i>Pedidos</a></li>
           <!--<li><a href="preferences.html"><i class="fa fa-sliders fa-fw"></i>Preferences</a></li>-->
         </ul>
