atualiza cardapio tabela produtos - pedidos.html

--- a/pedidos.html
+++ b/pedidos.html
@@ -59,7 +59,7 @@
                   <td>Pedido</td>
                   <td>Data</td>
                   <td>Forma de pagamento</td>
-                  <td>Valor pagp</td>
+                  <td>Valor pago</td>
                   <td>Ações</td>
                 </tr>
               </thead>
