--- a/pedidos.html
+++ b/pedidos.html
@@ -89,7 +89,7 @@
             <label for="ano">Ano:</label>
             <input type="number" id="ano" placeholder="ex: 2025" min="2000" max="2099">
 
-            <button onclick="baixarRelatorioFiltrado()" class="btn btn-primary">Baixar Relatório Filtrado (PDF)</button>
+            <button onclick="baixarRelatorioFiltrado()" class="btn btn-primary">Baixar Relatório (PDF)</button>
         </div>
         </div>
 
